# aoc2025

./: .gitignore  Cargo.toml  Makefile  README.md
cpp/: .gitignore  CMakeLists.txt  Makefile
cpp/07/: CMakeLists.txt  solve.cc
cpp/08/: CMakeLists.txt  solve.cc
cpp/lib/: 2d.h  CMakeLists.txt  aoc-main.cc  aoc.h  timeit.cc  trie.h  unicode.cc
src/: lib.rs
